--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
           <img src="images/logo.svg" alt="" />
         </div>
         <div class="general-info grid-temp-colum-row-3x2">
-          <a href="#">FAQs</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Install Guide</a>
-          <a href="#">Contact Us</a>
-          <a href="#">Press Kit</a>
+          <a href="#" aria-label="FAQs">FAQs</a>
+          <a href="#" aria-label="Privacy Policy">Privacy Policy</a>
+          <a href="#" aria-label="Install Guide">Install Guide</a>
+          <a href="#" aria-label="Contact Us">Contact Us</a>
+          <a href="#" aria-label="Press Kit">Press Kit</a>
         </div>
         <div class="social-icons flex">
-          <a href="#" class="fb">
+          <a href="#" class="fb" aria-label="fb">
             <img src="images/icon-facebook.svg" alt="" />
           </a>
-          <a href="#" class="tw">
+          <a href="#" class="tw" aria-label="tw">
             <img src="images/icon-twitter.svg" alt="" />
           </a>
-          <a href="#" class="ig">
+          <a href="#" class="ig" aria-label="ig">
             <img src="images/icon-instagram.svg" alt="" />
           </a>
         </div>
